<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Imagen superior -->
    <ImageView
        android:id="@+id/welcomeImage"
        android:layout_width="208dp"
        android:layout_height="204dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@null"
        android:src="@drawable/bienvenida1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Título principal -->
    <TextView
        android:id="@+id/welcometitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/welcome_title"
        android:textColor="#53A2B3"
        android:textSize="30sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeImage" />

    <!-- Subtítulo -->
    <TextView
        android:id="@+id/welcomeSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/welcome_subtitle"
        android:textColor="#53A2B3"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcometitle" />



    <TextView
        android:id="@+id/welcomeDescription"
        android:layout_width="294dp"
        android:layout_height="53dp"
        android:gravity="center"
        android:text="@string/welcome_description"
        android:textColor="#2A364E"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62" />

    <TextView
        android:id="@+id/welcomeAdditionalDescription"
        android:layout_width="335dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:lineSpacingExtra="6dp"
        android:text="@string/welcome_additional_description"
        android:textColor="#555555"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeDescription" />

    <LinearLayout
        android:id="@+id/dotsIndicator"
        android:layout_width="92dp"
        android:layout_height="25dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/skipButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeAdditionalDescription"
        app:layout_constraintVertical_bias="1.0">

        <View
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_margin="12dp"
            android:background="@drawable/dot_active" />

        <View
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_margin="12dp"
            android:background="@drawable/dot_inactive" />

        <View
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_margin="12dp"
            android:background="@drawable/dot_inactive" />
    </LinearLayout>

    <Button
        android:id="@+id/skipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="28dp"
        android:background="@android:color/transparent"
        android:onClick="goToHome"
        android:text="@string/skip"
        android:textColor="#53A2B3"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
