<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Imagen superior -->

    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/welcome_question_title"
        android:textColor="#2A364E"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeImage" />

    <ImageView
        android:id="@+id/welcomeImage"
        android:layout_width="257dp"
        android:layout_height="257dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@null"
        android:src="@drawable/bienvenida2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/dotsIndicator"
        android:layout_width="92dp"
        android:layout_height="25dp"
        android:layout_marginTop="84dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/skipButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeSubtitle"
        app:layout_constraintVertical_bias="0.864">

        <View
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_margin="12dp"
            android:background="@drawable/dot_inactive" />

        <View
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_margin="12dp"
            android:background="@drawable/dot_active" />

        <View
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_margin="12dp"
            android:background="@drawable/dot_inactive" />
    </LinearLayout>

    <Button
        android:id="@+id/skipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="26dp"
        android:background="@android:color/transparent"
        android:onClick="goToHome"
        android:text="@string/skip"
        android:textColor="#53A2B3"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/welcomeSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/welcome_question_subtitle"
        android:textColor="#555555"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeTitle" />


</androidx.constraintlayout.widget.ConstraintLayout>
